# rust-ocr-poc

./: Cargo.toml  README.md
benches/: my_benchmark.rs
benches/performance outputs/: outputs.txt
ocrs/image/: 1.png.txt  2.png.txt  Google 1 .png.txt  issue-163.png.txt  issue-221-doc2.png.txt  issue-592.png.txt  test-de.png.txt  test-enfrde.png.txt  test-fr.png.txt  test-ocr.png.txt  test.json.png.txt  test.xhtml.png.txt
src/: folder_manager.rs  leptess.rs  lib.rs  main.rs  ocrs.rs  paddleocr.rs  tesseract.rs  win_ocr.rs
tesseract/image/: 1.png.txt  2.png.txt  Google 1 .png.txt  issue-163.png.txt  issue-221-doc2.png.txt  issue-592.png.txt  test-de.png.txt  test-enfrde.png.txt  test-ocr.png.txt  test.json.png.txt  test.xhtml.png.txt
win_ocr/image/: 1.png.txt  2.png.txt  Google 1 .png.txt  issue-163.png.txt  issue-221-doc2.png.txt  issue-592.png.txt  test-de.png.txt  test-enfrde.png.txt  test-fr.png.txt  test.json.png.txt  test.xhtml.png.txt
