[package]
name = "screen-capture-tesseract-deneme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
screenshots = "0.8.10"
# tesseract = "0.15.1"
rusty-tesseract = "1.1.10"
criterion = { version = "0.5.1", features = ["html_reports"] }

lexopt = "0.3.0"
ocrs = "0.5.0"
rten-imageio = "0.4.0"
rten-imageproc = "0.4.0"
rten-tensor = "0.4.0"
rten = "0.4.0"
win_ocr = "0.1.3"
# leptess = "0.14.0"
paddleocr = "0.4.1"
# perf_monitor = "0.2.0"

[[bench]]
name = "my_benchmark"
harness = false
